--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 	<dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>shell_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT</version>
+    		<version>0.0.1-20210426.234151-1</version>
 	</dependency>
     </dependencies>
 
