--- a/pom.xml
+++ b/pom.xml
@@ -36,27 +36,27 @@
         <dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>bubble_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT.231003-1</version>
+    		<version>v1</version>
 	</dependency>
 	<dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>circle_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT.231921-1</version>
+    		<version>v1</version>
 	</dependency>
 	<dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>comb_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT.232950-1</version>
+    		<version>v1</version>
 	</dependency>
 	<dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>head_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT.233850-1</version>
+    		<version>v1</version>
 	</dependency>
 	<dependency>
     		<groupId>gt.edu.umg.ingenieria.sistemas.ingenieria_software.parcial2</groupId>
     		<artifactId>shell_sort</artifactId>
-    		<version>0.0.1-SNAPSHOT.234151-1</version>
+    		<version>v1</version>
 	</dependency>
     </dependencies>
 
